# chatguard

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  NOTICE.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: ci.yml
ci/: pipeline.yml
config/: rules.yaml
docs/: admin_commands.md  architecture.md  deployment.md  discord_connector.md  guia_admin.md  moderacion_ml.md  moderacion_proceso.md  persistence.md  privacidad_bot.md  project_tree.md  rules_reference.md  telegram_connector.md  whatsapp_setup.md
docs/sql/: moderacion_inserts.sql  moderacion_schema.sql  moderacion_schema_compatible.sql
examples/: sample_env_vars.md  sample_messages.json
infra/docker/: .dockerignore  Dockerfile
infra/k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
scripts/: dev_format.bat  dev_lint.bat  dev_test.bat  generate_tree.py  run_chatguard.bat  run_tests.sh
src/app/: config.py  health.py  schemas.py  server.py
src/bot_core/: manager.py  policy.py
src/config/: rules_loader.py
src/connectors/: discord_connector.py  dispatcher.py  telegram_connector.py  telegram_polling.py  webchat_connector.py  whatsapp_connector.py
src/handlers/: bienvenida.py  encuesta.py  greeting.py  moderacion.py  moderation_service.py  sorteo.py
src/ml/: nb_text.py  runtime.py  tokenizer.py
src/nlu/: entity_extractor.py  intent_detector.py  language_utils.py
src/storage/: db.py  models.py  (+1 more)
tests/: run_api_tests.py
tools/: inspect_rules.py  internal_test.py
(+13 files in other folders)
